# google-docs-tool

./: .gitignore  CHANGELOG.md  Gemini_CLI_配置文档.md  README.md  client.py  diagnose_client.py  oauth_test.md  pyproject.toml  requirements.txt  run_tests.sh
script/: run_append.sh  run_markdown_append.sh
src/: auth.py  client.py
src/google_docs_mcp_tool.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/server/: mcp_server.py
src/tool/: append.py  google_docs_tool.py  markdown_parser.py  replace.py
test/: test_integration_google_docs_tool.py  test_local_google_docs_tool.py  test_markdown_parser.py  test_remote_clear.py  test_remote_write.py
test/doc/: folder_test.md  table_test.md
